Updated Home Page

--- a/src/App.css
+++ b/src/App.css
@@ -9,3 +9,9 @@ ul {
 #footer-section {
   background-color: lightgrey;
 }
+
+.main-container {
+  display: flex;
+  width: auto;
+  height: 520px;
+}
